--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+* {
+  box-sizing: border-box;
+}
 html,
 body {
-  background-color: #999;
+  background-color: #fff;
   color: #000208;
 }
 a {
@@ -15,5 +18,6 @@ main {
 footer {
   display: flex;
   justify-content: center;
-  height: 50px;
+  background-color: #333333;
+  padding: 0.5rem;
 }
