--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,16 @@
 html,
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #fff;
-  color: #000208;
+  background-color: #f3f3f3;
+  color: #000;
   width: 100%;
   margin: auto;
 }
 a {
   text-decoration: none;
+}
+a:visited {
+  color: #000208;
 }
 a:hover {
   text-decoration: underline;
