--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,11 @@ body {
   color: #000;
   width: 100%;
   margin: auto;
+  scroll-behavior: smooth;
 }
 a {
   text-decoration: none;
+  color: #000;
 }
 a:visited {
   color: #000208;
